commit changes : added some design

--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,25 @@
+body{
+    font-family: 'Dosis', sans-serif;
+}
 .chatBox{
-    width: 1000px;
-    margin: 0 auto;
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+}
+#target{
+    font-family: 'Dosis', sans-serif;
+    padding: 10px;
+    border-radius: 20px;
+    width: 500px;
+    height: fit-content;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+input{
+    width: 500px;
+    border-radius: 8px;
+}
+button{
+    margin-right: 10px;
 }
