--- a/client/style.css
+++ b/client/style.css
@@ -7,6 +7,7 @@ body{
     align-items: center;
     flex-direction: column;
 
+
 }
 #target{
     font-family: 'Dosis', sans-serif;
@@ -14,6 +15,7 @@ body{
     border-radius: 20px;
     width: 500px;
     height: fit-content;
+    margin-top: 200px;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 input{
@@ -22,4 +24,7 @@ input{
 }
 button{
     margin-right: 10px;
+}
+form{
+    position: fixed;
 }
